examples/datalog/15_arithmetic/26_negative_numbers.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_negative
Knowledge graph 'test_negative' created.
Switched to knowledge graph: test_negative
> .kg use test_negative
Switched to knowledge graph: test_negative
> +nums[(-5,), (0,), (5,)].
Inserted 3 fact(s) into 'nums'.
> doubled(X, Y) :- nums(X), Y = X * 2.
Script error: Query execution failed: Unsafe rule: Atom { relation: "doubled", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
